[gd_scene load_steps=13 format=3 uid="uid://d0mw8wj8s5u5w"]

[ext_resource type="Script" path="res://scenes/audio_manager.gd" id="1_wh808"]
[ext_resource type="AudioStream" uid="uid://bgl3g7iattxwf" path="res://assets/sounds/mooh_1.wav" id="2_kgp3x"]
[ext_resource type="AudioStream" uid="uid://l2hevifpc36h" path="res://assets/sounds/mooh_2.wav" id="3_1w3ns"]
[ext_resource type="AudioStream" uid="uid://deq2c52ycmna0" path="res://assets/sounds/mooh_3.wav" id="4_ohma1"]
[ext_resource type="AudioStream" uid="uid://c5xvdmp01byeb" path="res://assets/sounds/game_start.wav" id="5_31x67"]
[ext_resource type="AudioStream" uid="uid://crukeo4lg3evd" path="res://assets/sounds/game_end.wav" id="6_e0aol"]
[ext_resource type="AudioStream" uid="uid://b5vf4age662ig" path="res://assets/sounds/catch_attempt_1.wav" id="7_fbtqt"]
[ext_resource type="AudioStream" uid="uid://byw1xo1lalcs4" path="res://assets/sounds/catch_attempt_2.wav" id="8_43hs6"]
[ext_resource type="AudioStream" uid="uid://dgan3kikbhnrv" path="res://assets/sounds/catch_1.wav" id="9_x5242"]
[ext_resource type="AudioStream" uid="uid://b3wy0wug1sx02" path="res://assets/sounds/catch_2.wav" id="10_2je0g"]
[ext_resource type="AudioStream" uid="uid://70agy2h2g4vx" path="res://assets/sounds/menu_theme.wav" id="11_ynaqd"]
[ext_resource type="AudioStream" uid="uid://bi4t8e4w2nncf" path="res://assets/sounds/game_theme.wav" id="12_jmnoc"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_wh808")

[node name="Mooh1SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_kgp3x")

[node name="Mooh2SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1w3ns")

[node name="Mooh3SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ohma1")

[node name="GameStartSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_31x67")

[node name="GameEndSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_e0aol")

[node name="CatchAttempt1SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_fbtqt")

[node name="CatchAttempt2SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_43hs6")

[node name="Catch1SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_x5242")

[node name="Catch2SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_2je0g")

[node name="MenuTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ynaqd")

[node name="GameTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_jmnoc")
