extends Node

@onready var mooh_1_sfx: AudioStreamPlayer = $Mooh1SFX
@onready var mooh_2_sfx: AudioStreamPlayer = $Mooh2SFX
@onready var mooh_3_sfx: AudioStreamPlayer = $Mooh3SFX
@onready var game_start_sfx: AudioStreamPlayer = $GameStartSFX
@onready var game_end_sfx: AudioStreamPlayer = $GameEndSFX
@onready var catch_attempt_1_sfx: AudioStreamPlayer = $CatchAttempt1SFX
@onready var catch_attempt_2_sfx: AudioStreamPlayer = $CatchAttempt2SFX
@onready var catch_1_sfx: AudioStreamPlayer = $Catch1SFX
@onready var catch_2_sfx: AudioStreamPlayer = $Catch2SFX
@onready var menu_theme: AudioStreamPlayer = $MenuTheme
@onready var game_theme: AudioStreamPlayer = $GameTheme
